--- a/clockstyle.css
+++ b/clockstyle.css
@@ -110,7 +110,7 @@ body{
 .sunrise, .daytime, .sunset, .night{
 	width: 100%;
 	height: 100%;
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
 
