--- a/clockstyle.css
+++ b/clockstyle.css
@@ -1,8 +1,9 @@
 *{
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	font-family: 'Syne Mono', monospace;
 }
+ 
 
 body{
 	display: flex;
@@ -10,7 +11,7 @@ body{
 	align-items: center;
 	flex-direction: column;
 	min-height: 100vh;
-	background: white;
+	
 }
 
 .clock{
@@ -21,17 +22,10 @@ body{
 	align-items:center;
 	border: 8px solid black;
 	border-radius: 50%;
+	background: transparent; 
 }
 
-.clock::before{
-	content: '';
-	position: absolute;
-	width: 15px;
-	background: blue;
-	z-index: 10000;
-	border-radius: 50%;
 
-}
 
 .hour, .min, .sec{
 	position: absolute;
@@ -63,7 +57,7 @@ body{
 	position: absolute;
 	width: 8px;
 	height: 100px;
-	background: green;
+	background: black;
 }
 
 .mn::before{
@@ -71,7 +65,7 @@ body{
 	position: absolute;
 	width: 4px;
 	height: 110px;
-	background: pink;
+	background: black;
 }	
 
 .sc::before{
@@ -79,39 +73,39 @@ body{
 	position: absolute;
 	width: 2px;
 	height: 120px;
-	background: yellow;
+	background: black;
 }
 
-#digitalClock{
+#digitalClock, .datum{
 	display: flex;
-	color: #a01a58;
+	color: black;
 	font-size: 4em;
 	margin-top: 20px;
-	justify-content:center; 
-}
-
-.sunrise{
-	background-image: url('sunrise5-7.jpg');
-}
-
-.daytime{
-	background-image: url('daytime7-17.jpg');
+	justify-content: center; 
+	
 }
 
 
-.sunset{
-	background-image: url('sunset17-19.jpg');
-}
-
-.night{
-	background-image: url('night19-5.jpg');
-}
-
-.sunrise, .daytime, .sunset, .night{
+body{
 	width: 100%;
 	height: 100%;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 
-	
+/* sunrise */
+.purple{
+	background-image: linear-gradient(#ffffff,#f1e1b6, #98dee0, #80bbe7, #3d8ede);  
+}
+/* day*/
+.green{
+	background-image: linear-gradient(#e3f1ff, #89bff8, #408ee0, #1b75be);
+}
+
+/* sunset */
+.yellow{
+	background-image: linear-gradient(#11161b, #58151A, #BA6D09,#3072EB,#1552C6,#0542A8);
+}
+/* night */
+.red{
+	background-image: linear-gradient(#11161b,#162632,#405973,#405973,#162632,#11161b);
+}
+
